@@ -49,6 +49,7 @@ GEMS_DEPEND="
 	dev-libs/icu
 	dev-libs/libxml2
 	dev-libs/libxslt
+	dev-libs/re2
 	dev-util/ragel
 	>=net-libs/nodejs-4.3.0
 	>=sys-apps/yarn-0.17.0
@@ -78,7 +79,7 @@ RDEPEND="
 # required bundler >= 1.15.0
 ruby_add_bdepend "
 	virtual/rubygems
-	>=dev-ruby/bundler-1.13.7"
+	>=dev-ruby/bundler-1.14.6"
 
 #
 # fix-sendmail-config:
